# mangga

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
example/: Cargo.toml
example/src/: main.rs
mangga/: Cargo.toml
mangga-macro/: Cargo.toml
mangga-macro/src/: lib.rs
mangga-macro/src/join_macro/: join_result.rs  joinable.rs  mod.rs
mangga-macro/src/model/: attrs.rs  fields.rs  items.rs  mod.rs
mangga-macro/src/model_macro/: attrs.rs  field.rs  item.rs  mod.rs
mangga/src/: client.rs  db.rs  error.rs  lib.rs  trait_impls.rs  traits.rs
mangga/src/dsl/: comparisons.rs  filter.rs  join.rs  join_result.rs  logicals.rs  macros.rs  mod.rs  operation.rs  query.rs  sort.rs
mangga/src/dsl/operation/: delete.rs  insert.rs  update.rs
mangga/src/dsl/query/: count.rs  find.rs
mangga/src/operations/: count.rs  delete.rs  filter.rs  find.rs  insert.rs  mod.rs  update.rs
mangga/src/traits/: mod.rs  models.rs  ops.rs  others.rs  self_ops.rs
mangga/src/types/: datetime.rs  error.rs  id.rs  mod.rs
