[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
async-graphql = { version = "7.0.7", features = ["bson"] }
bson = "2.11.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
futures = "0.3.30"
mangga = { path = "../mangga" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.41"
