[package]
name = "mangga-macro"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
change-case = "0.2.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }
