[package]
name = "mangga"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
async-graphql = "7.0.7"
bson = "2.11.0"
chrono = "0.4.38"
futures = "0.3.30"
mangga-macro = { path = "../mangga-macro" }
mongodb = "3.0.1"
once_cell = "1.19.0"
serde = "1.0.204"
thiserror = "1.0.63"
