[package]
name = "mangga"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = "0.4.38"
futures = "0.3.31"
mangga-macro = { path = "../mangga-macro" }
mongodb = "3.1.0"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
